[package]
name = "gitlabfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.9"
fuser = "0.17.0"
libc = "0.2.183"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "2", features = ["json"] }
urlencoding = "2.1.3"
