[package]
name = "gitlabfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env"] }
env_logger = "0.11.9"
fuser = "0.17.0"
libc = "0.2.183"
log = "0.4.29"
lru = "0.16.3"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
urlencoding = "2.1.3"
